operations/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> BLOCK_CODE
Rule 2     BLOCK_CODE -> GV
Rule 3     BLOCK_CODE -> GC
Rule 4     BLOCK_CODE -> GF
Rule 5     BLOCK_CODE -> GCF
Rule 6     BLOCK_CODE -> PRINT
Rule 7     BLOCK_CODE -> EMPTY
Rule 8     C -> GV
Rule 9     C -> GC
Rule 10    C -> GCF
Rule 11    C -> PRINT
Rule 12    C -> EMPTY
Rule 13    GV -> TD V I VA BLOCK_CODE
Rule 14    GV -> TD V BLOCK_CODE
Rule 15    GV -> EMPTY
Rule 16    PRINT -> AO VAP AC BLOCK_CODE
Rule 17    PRINT -> EMPTY
Rule 18    AO -> SUBTRACTION MA
Rule 19    VAP -> V
Rule 20    VAP -> VA
Rule 21    VAP -> CD
Rule 22    VAP -> FR
Rule 23    FR -> TD V ME PR MA
Rule 24    FR -> TD V ME MA
Rule 25    AC -> ME SUBTRACTION
Rule 26    TD -> INTEGER_TYPE
Rule 27    TD -> BOOLEAN_TYPE
Rule 28    TD -> DECIMAL_TYPE
Rule 29    TD -> STRING_TYPE
Rule 30    V -> VARIABLE
Rule 31    I -> ASSIGNMENT
Rule 32    VA -> NUMBER
Rule 33    VA -> NUMBER DOT NUMBER
Rule 34    VA -> TRUE_VALUE
Rule 35    VA -> FALSE_VALUE
Rule 36    VA -> QUOTATION_MARKS V QUOTATION_MARKS
Rule 37    GC -> CN PA CD PC MY C MN BLOCK_CODE
Rule 38    GC -> CN PA CD PC MY MN BLOCK_CODE
Rule 39    GC -> EMPTY
Rule 40    CN -> IF
Rule 41    CD -> V S V
Rule 42    CD -> V S VA
Rule 43    CD -> VA S V
Rule 44    CD -> VA S VA
Rule 45    S -> EQUAL
Rule 46    S -> GREATER_THAN
Rule 47    S -> LESS_THAN
Rule 48    S -> GREATER_OR_EQUAL
Rule 49    S -> LESS_OR_EQUAL
Rule 50    S -> NOT_EQUAL
Rule 51    GF -> TD V ME PR MA MY C RT MN BLOCK_CODE
Rule 52    GF -> V ME PR MA MY C MN BLOCK_CODE
Rule 53    GF -> TD V ME PR MA MY RT MN BLOCK_CODE
Rule 54    GF -> V ME PR MA MY MN BLOCK_CODE
Rule 55    GF -> TD V ME MA MY C RT MN BLOCK_CODE
Rule 56    GF -> V ME MA MY C MN BLOCK_CODE
Rule 57    GF -> TD V ME MA MY RT MN BLOCK_CODE
Rule 58    GF -> V ME MA MY MN BLOCK_CODE
Rule 59    GF -> EMPTY
Rule 60    PR -> V
Rule 61    ME -> LESS_THAN
Rule 62    MA -> GREATER_THAN
Rule 63    RT -> RETURN V
Rule 64    GCF -> F PA CDF PC MY C MN BLOCK_CODE
Rule 65    GCF -> F PA CDF PC MY MN BLOCK_CODE
Rule 66    GCF -> EMPTY
Rule 67    F -> FOR
Rule 68    CDF -> NUMBER SE NUMBER SE O
Rule 69    SE -> PIPE
Rule 70    O -> SUBTRACTION
Rule 71    O -> ADDITION
Rule 72    PA -> PARENTHESIS_OPEN
Rule 73    PC -> PARENTHESIS_CLOSE
Rule 74    MY -> OPEN_BODY
Rule 75    MN -> LESS_OR_EQUAL
Rule 76    EMPTY -> <empty>

Terminals, with rules where they appear

ADDITION             : 71
ASSIGNMENT           : 31
BOOLEAN_TYPE         : 27
DECIMAL_TYPE         : 28
DOT                  : 33
EQUAL                : 45
FALSE_VALUE          : 35
FOR                  : 67
GREATER_OR_EQUAL     : 48
GREATER_THAN         : 46 62
IF                   : 40
INTEGER_TYPE         : 26
LESS_OR_EQUAL        : 49 75
LESS_THAN            : 47 61
NOT_EQUAL            : 50
NUMBER               : 32 33 33 68 68
OPEN_BODY            : 74
PARENTHESIS_CLOSE    : 73
PARENTHESIS_OPEN     : 72
PIPE                 : 69
QUOTATION_MARKS      : 36 36
RETURN               : 63
STRING_TYPE          : 29
SUBTRACTION          : 18 25 70
TRUE_VALUE           : 34
VARIABLE             : 30
error                : 

Nonterminals, with rules where they appear

AC                   : 16
AO                   : 16
BLOCK_CODE           : 1 13 14 16 37 38 51 52 53 54 55 56 57 58 64 65
C                    : 37 51 52 55 56 64
CD                   : 21 37 38
CDF                  : 64 65
CN                   : 37 38
EMPTY                : 7 12 15 17 39 59 66
F                    : 64 65
FR                   : 22
GC                   : 3 9
GCF                  : 5 10
GF                   : 4
GV                   : 2 8
I                    : 13
MA                   : 18 23 24 51 52 53 54 55 56 57 58
ME                   : 23 24 25 51 52 53 54 55 56 57 58
MN                   : 37 38 51 52 53 54 55 56 57 58 64 65
MY                   : 37 38 51 52 53 54 55 56 57 58 64 65
O                    : 68
PA                   : 37 38 64 65
PC                   : 37 38 64 65
PR                   : 23 51 52 53 54
PRINT                : 6 11
PROGRAM              : 0
RT                   : 51 53 55 57
S                    : 41 42 43 44
SE                   : 68 68
TD                   : 13 14 23 24 51 53 55 57
V                    : 13 14 19 23 24 36 41 41 42 43 51 52 53 54 55 56 57 58 60 63
VA                   : 13 20 42 43 44 44
VAP                  : 16

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . BLOCK_CODE
    (2) BLOCK_CODE -> . GV
    (3) BLOCK_CODE -> . GC
    (4) BLOCK_CODE -> . GF
    (5) BLOCK_CODE -> . GCF
    (6) BLOCK_CODE -> . PRINT
    (7) BLOCK_CODE -> . EMPTY
    (13) GV -> . TD V I VA BLOCK_CODE
    (14) GV -> . TD V BLOCK_CODE
    (15) GV -> . EMPTY
    (37) GC -> . CN PA CD PC MY C MN BLOCK_CODE
    (38) GC -> . CN PA CD PC MY MN BLOCK_CODE
    (39) GC -> . EMPTY
    (51) GF -> . TD V ME PR MA MY C RT MN BLOCK_CODE
    (52) GF -> . V ME PR MA MY C MN BLOCK_CODE
    (53) GF -> . TD V ME PR MA MY RT MN BLOCK_CODE
    (54) GF -> . V ME PR MA MY MN BLOCK_CODE
    (55) GF -> . TD V ME MA MY C RT MN BLOCK_CODE
    (56) GF -> . V ME MA MY C MN BLOCK_CODE
    (57) GF -> . TD V ME MA MY RT MN BLOCK_CODE
    (58) GF -> . V ME MA MY MN BLOCK_CODE
    (59) GF -> . EMPTY
    (64) GCF -> . F PA CDF PC MY C MN BLOCK_CODE
    (65) GCF -> . F PA CDF PC MY MN BLOCK_CODE
    (66) GCF -> . EMPTY
    (16) PRINT -> . AO VAP AC BLOCK_CODE
    (17) PRINT -> . EMPTY
    (76) EMPTY -> .
    (26) TD -> . INTEGER_TYPE
    (27) TD -> . BOOLEAN_TYPE
    (28) TD -> . DECIMAL_TYPE
    (29) TD -> . STRING_TYPE
    (40) CN -> . IF
    (30) V -> . VARIABLE
    (67) F -> . FOR
    (18) AO -> . SUBTRACTION MA

    $end            reduce using rule 76 (EMPTY -> .)
    INTEGER_TYPE    shift and go to state 14
    BOOLEAN_TYPE    shift and go to state 15
    DECIMAL_TYPE    shift and go to state 16
    STRING_TYPE     shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 19
    FOR             shift and go to state 20
    SUBTRACTION     shift and go to state 21

    PROGRAM                        shift and go to state 1
    BLOCK_CODE                     shift and go to state 2
    GV                             shift and go to state 3
    GC                             shift and go to state 4
    GF                             shift and go to state 5
    GCF                            shift and go to state 6
    PRINT                          shift and go to state 7
    EMPTY                          shift and go to state 8
    TD                             shift and go to state 9
    V                              shift and go to state 10
    CN                             shift and go to state 11
    F                              shift and go to state 12
    AO                             shift and go to state 13

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> BLOCK_CODE .

    $end            reduce using rule 1 (PROGRAM -> BLOCK_CODE .)


state 3

    (2) BLOCK_CODE -> GV .

    $end            reduce using rule 2 (BLOCK_CODE -> GV .)
    LESS_OR_EQUAL   reduce using rule 2 (BLOCK_CODE -> GV .)
    RETURN          reduce using rule 2 (BLOCK_CODE -> GV .)


state 4

    (3) BLOCK_CODE -> GC .

    $end            reduce using rule 3 (BLOCK_CODE -> GC .)
    LESS_OR_EQUAL   reduce using rule 3 (BLOCK_CODE -> GC .)
    RETURN          reduce using rule 3 (BLOCK_CODE -> GC .)


state 5

    (4) BLOCK_CODE -> GF .

    $end            reduce using rule 4 (BLOCK_CODE -> GF .)
    LESS_OR_EQUAL   reduce using rule 4 (BLOCK_CODE -> GF .)
    RETURN          reduce using rule 4 (BLOCK_CODE -> GF .)


state 6

    (5) BLOCK_CODE -> GCF .

    $end            reduce using rule 5 (BLOCK_CODE -> GCF .)
    LESS_OR_EQUAL   reduce using rule 5 (BLOCK_CODE -> GCF .)
    RETURN          reduce using rule 5 (BLOCK_CODE -> GCF .)


state 7

    (6) BLOCK_CODE -> PRINT .

    $end            reduce using rule 6 (BLOCK_CODE -> PRINT .)
    LESS_OR_EQUAL   reduce using rule 6 (BLOCK_CODE -> PRINT .)
    RETURN          reduce using rule 6 (BLOCK_CODE -> PRINT .)


state 8

    (7) BLOCK_CODE -> EMPTY .
    (15) GV -> EMPTY .
    (39) GC -> EMPTY .
    (59) GF -> EMPTY .
    (66) GCF -> EMPTY .
    (17) PRINT -> EMPTY .

  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for $end resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for LESS_OR_EQUAL resolved using rule 7 (BLOCK_CODE -> EMPTY .)
  ! reduce/reduce conflict for RETURN resolved using rule 7 (BLOCK_CODE -> EMPTY .)
    $end            reduce using rule 7 (BLOCK_CODE -> EMPTY .)
    LESS_OR_EQUAL   reduce using rule 7 (BLOCK_CODE -> EMPTY .)
    RETURN          reduce using rule 7 (BLOCK_CODE -> EMPTY .)

  ! $end            [ reduce using rule 15 (GV -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 15 (GV -> EMPTY .) ]
  ! RETURN          [ reduce using rule 15 (GV -> EMPTY .) ]
  ! $end            [ reduce using rule 39 (GC -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 39 (GC -> EMPTY .) ]
  ! RETURN          [ reduce using rule 39 (GC -> EMPTY .) ]
  ! $end            [ reduce using rule 59 (GF -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 59 (GF -> EMPTY .) ]
  ! RETURN          [ reduce using rule 59 (GF -> EMPTY .) ]
  ! $end            [ reduce using rule 66 (GCF -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 66 (GCF -> EMPTY .) ]
  ! RETURN          [ reduce using rule 66 (GCF -> EMPTY .) ]
  ! $end            [ reduce using rule 17 (PRINT -> EMPTY .) ]
  ! LESS_OR_EQUAL   [ reduce using rule 17 (PRINT -> EMPTY .) ]
  ! RETURN          [ reduce using rule 17 (PRINT -> EMPTY .) ]


state 9

    (13) GV -> TD . V I VA BLOCK_CODE
    (14) GV -> TD . V BLOCK_CODE
    (51) GF -> TD . V ME PR MA MY C RT MN BLOCK_CODE
    (53) GF -> TD . V ME PR MA MY RT MN BLOCK_CODE
    (55) GF -> TD . V ME MA MY C RT MN BLOCK_CODE
    (57) GF -> TD . V ME MA MY RT MN BLOCK_CODE
    (30) V -> . VARIABLE

    VARIABLE        shift and go to state 19

    V                              shift and go to state 22

state 10

    (52) GF -> V . ME PR MA MY C MN BLOCK_CODE
    (54) GF -> V . ME PR MA MY MN BLOCK_CODE
    (56) GF -> V . ME MA MY C MN BLOCK_CODE
    (58) GF -> V . ME MA MY MN BLOCK_CODE
    (61) ME -> . LESS_THAN

    LESS_THAN       shift and go to state 24

    ME                             shift and go to state 23

state 11

    (37) GC -> CN . PA CD PC MY C MN BLOCK_CODE
    (38) GC -> CN . PA CD PC MY MN BLOCK_CODE
    (72) PA -> . PARENTHESIS_OPEN

    PARENTHESIS_OPEN shift and go to state 26

    PA                             shift and go to state 25

state 12

    (64) GCF -> F . PA CDF PC MY C MN BLOCK_CODE
    (65) GCF -> F . PA CDF PC MY MN BLOCK_CODE
    (72) PA -> . PARENTHESIS_OPEN

    PARENTHESIS_OPEN shift and go to state 26

    PA                             shift and go to state 27

state 13

    (16) PRINT -> AO . VAP AC BLOCK_CODE
    (19) VAP -> . V
    (20) VAP -> . VA
    (21) VAP -> . CD
    (22) VAP -> . FR
    (30) V -> . VARIABLE
    (32) VA -> . NUMBER
    (33) VA -> . NUMBER DOT NUMBER
    (34) VA -> . TRUE_VALUE
    (35) VA -> . FALSE_VALUE
    (36) VA -> . QUOTATION_MARKS V QUOTATION_MARKS
    (41) CD -> . V S V
    (42) CD -> . V S VA
    (43) CD -> . VA S V
    (44) CD -> . VA S VA
    (23) FR -> . TD V ME PR MA
    (24) FR -> . TD V ME MA
    (26) TD -> . INTEGER_TYPE
    (27) TD -> . BOOLEAN_TYPE
    (28) TD -> . DECIMAL_TYPE
    (29) TD -> . STRING_TYPE

    VARIABLE        shift and go to state 19
    NUMBER          shift and go to state 33
    TRUE_VALUE      shift and go to state 34
    FALSE_VALUE     shift and go to state 35
    QUOTATION_MARKS shift and go to state 36
    INTEGER_TYPE    shift and go to state 14
    BOOLEAN_TYPE    shift and go to state 15
    DECIMAL_TYPE    shift and go to state 16
    STRING_TYPE     shift and go to state 17

    VAP                            shift and go to state 28
    V                              shift and go to state 29
    VA                             shift and go to state 30
    CD                             shift and go to state 31
    FR                             shift and go to state 32
    TD                             shift and go to state 37

state 14

    (26) TD -> INTEGER_TYPE .

    VARIABLE        reduce using rule 26 (TD -> INTEGER_TYPE .)


state 15

    (27) TD -> BOOLEAN_TYPE .

    VARIABLE        reduce using rule 27 (TD -> BOOLEAN_TYPE .)


state 16

    (28) TD -> DECIMAL_TYPE .

    VARIABLE        reduce using rule 28 (TD -> DECIMAL_TYPE .)


state 17

    (29) TD -> STRING_TYPE .

    VARIABLE        reduce using rule 29 (TD -> STRING_TYPE .)


state 18

    (40) CN -> IF .

    PARENTHESIS_OPEN reduce using rule 40 (CN -> IF .)


state 19

    (30) V -> VARIABLE .

    LESS_THAN       reduce using rule 30 (V -> VARIABLE .)
    ASSIGNMENT      reduce using rule 30 (V -> VARIABLE .)
    INTEGER_TYPE    reduce using rule 30 (V -> VARIABLE .)
    BOOLEAN_TYPE    reduce using rule 30 (V -> VARIABLE .)
    DECIMAL_TYPE    reduce using rule 30 (V -> VARIABLE .)
    STRING_TYPE     reduce using rule 30 (V -> VARIABLE .)
    IF              reduce using rule 30 (V -> VARIABLE .)
    VARIABLE        reduce using rule 30 (V -> VARIABLE .)
    FOR             reduce using rule 30 (V -> VARIABLE .)
    SUBTRACTION     reduce using rule 30 (V -> VARIABLE .)
    $end            reduce using rule 30 (V -> VARIABLE .)
    LESS_OR_EQUAL   reduce using rule 30 (V -> VARIABLE .)
    RETURN          reduce using rule 30 (V -> VARIABLE .)
    EQUAL           reduce using rule 30 (V -> VARIABLE .)
    GREATER_THAN    reduce using rule 30 (V -> VARIABLE .)
    GREATER_OR_EQUAL reduce using rule 30 (V -> VARIABLE .)
    NOT_EQUAL       reduce using rule 30 (V -> VARIABLE .)
    QUOTATION_MARKS reduce using rule 30 (V -> VARIABLE .)
    PARENTHESIS_CLOSE reduce using rule 30 (V -> VARIABLE .)


state 20

    (67) F -> FOR .

    PARENTHESIS_OPEN reduce using rule 67 (F -> FOR .)


state 21

    (18) AO -> SUBTRACTION . MA
    (62) MA -> . GREATER_THAN

    GREATER_THAN    shift and go to state 39

    MA                             shift and go to state 38

state 22

    (13) GV -> TD V . I VA BLOCK_CODE
    (14) GV -> TD V . BLOCK_CODE
    (51) GF -> TD V . ME PR MA MY C RT MN BLOCK_CODE
    (53) GF -> TD V . ME PR MA MY RT MN BLOCK_CODE
    (55) GF -> TD V . ME MA MY C RT MN BLOCK_CODE
    (57) GF -> TD V . ME MA MY RT MN BLOCK_CODE
    (31) I -> . ASSIGNMENT
    (2) BLOCK_CODE -> . GV
    (3) BLOCK_CODE -> . GC
    (4) BLOCK_CODE -> . GF
    (5) BLOCK_CODE -> . GCF
    (6) BLOCK_CODE -> . PRINT
    (7) BLOCK_CODE -> . EMPTY
    (61) ME -> . LESS_THAN
    (13) GV -> . TD V I VA BLOCK_CODE
    (14) GV -> . TD V BLOCK_CODE
    (15) GV -> . EMPTY
    (37) GC -> . CN PA CD PC MY C MN BLOCK_CODE
    (38) GC -> . CN PA CD PC MY MN BLOCK_CODE
    (39) GC -> . EMPTY
    (51) GF -> . TD V ME PR MA MY C RT MN BLOCK_CODE
    (52) GF -> . V ME PR MA MY C MN BLOCK_CODE
    (53) GF -> . TD V ME PR MA MY RT MN BLOCK_CODE
    (54) GF -> . V ME PR MA MY MN BLOCK_CODE
    (55) GF -> . TD V ME MA MY C RT MN BLOCK_CODE
    (56) GF -> . V ME MA MY C MN BLOCK_CODE
    (57) GF -> . TD V ME MA MY RT MN BLOCK_CODE
    (58) GF -> . V ME MA MY MN BLOCK_CODE
    (59) GF -> . EMPTY
    (64) GCF -> . F PA CDF PC MY C MN BLOCK_CODE
    (65) GCF -> . F PA CDF PC MY MN BLOCK_CODE
    (66) GCF -> . EMPTY
    (16) PRINT -> . AO VAP AC BLOCK_CODE
    (17) PRINT -> . EMPTY
    (76) EMPTY -> .
    (26) TD -> . INTEGER_TYPE
    (27) TD -> . BOOLEAN_TYPE
    (28) TD -> . DECIMAL_TYPE
    (29) TD -> . STRING_TYPE
    (40) CN -> . IF
    (30) V -> . VARIABLE
    (67) F -> . FOR
    (18) AO -> . SUBTRACTION MA

    ASSIGNMENT      shift and go to state 43
    LESS_THAN       shift and go to state 24
    $end            reduce using rule 76 (EMPTY -> .)
    LESS_OR_EQUAL   reduce using rule 76 (EMPTY -> .)
    RETURN          reduce using rule 76 (EMPTY -> .)
    INTEGER_TYPE    shift and go to state 14
    BOOLEAN_TYPE    shift and go to state 15
    DECIMAL_TYPE    shift and go to state 16
    STRING_TYPE     shift and go to state 17
    IF              shift and go to state 18
    VARIABLE        shift and go to state 19
    FOR             shift and go to state 20
    SUBTRACTION     shift and go to state 21

    TD                             shift and go to state 9
    V                              shift and go to state 10
    I                              shift and go to state 40
    BLOCK_CODE                     shift and go to state 41
    ME                             shift and go to state 42
    GV                             shift and go to state 3
    GC                             shift and go to state 4
    GF                             shift and go to state 5
    GCF                            shift and go to state 6
    PRINT                          shift and go to state 7
    EMPTY                          shift and go to state 8
    CN                             shift and go to state 11
    F                              shift and go to state 12
    AO                             shift and go to state 13

state 23

    (52) GF -> V ME . PR MA MY C MN BLOCK_CODE
    (54) GF -> V ME . PR MA MY MN BLOCK_CODE
    (56) GF -> V ME . MA MY C MN BLOCK_CODE
    (58) GF -> V ME . MA MY MN BLOCK_CODE
    (60) PR -> . V
    (62) MA -> . GREATER_THAN
    (30) V -> . VARIABLE

    GREATER_THAN    shift and go to state 39
    VARIABLE        shift and go to state 19

    V                              shift and go to state 44
    PR                             shift and go to state 45
    MA                             shift and go to state 46

state 24

    (61) ME -> LESS_THAN .

    GREATER_THAN    reduce using rule 61 (ME -> LESS_THAN .)
    VARIABLE        reduce using rule 61 (ME -> LESS_THAN .)
    SUBTRACTION     reduce using rule 61 (ME -> LESS_THAN .)


state 25

    (37) GC -> CN PA . CD PC MY C MN BLOCK_CODE
    (38) GC -> CN PA . CD PC MY MN BLOCK_CODE
    (41) CD -> . V S V
    (42) CD -> . V S VA
    (43) CD -> . VA S V
    (44) CD -> . VA S VA
    (30) V -> . VARIABLE
    (32) VA -> . NUMBER
    (33) VA -> . NUMBER DOT NUMBER
    (34) VA -> . TRUE_VALUE
    (35) VA -> . FALSE_VALUE
    (36) VA -> . QUOTATION_MARKS V QUOTATION_MARKS

    VARIABLE        shift and go to state 19
    NUMBER          shift and go to state 33
    TRUE_VALUE      shift and go to state 34
    FALSE_VALUE     shift and go to state 35
    QUOTATION_MARKS shift and go to state 36

    CD                             shift and go to state 47
    V                              shift and go to state 48
    VA                             shift and go to state 49

state 26

    (72) PA -> PARENTHESIS_OPEN .

    VARIABLE        reduce using rule 72 (PA -> PARENTHESIS_OPEN .)
    NUMBER          reduce using rule 72 (PA -> PARENTHESIS_OPEN .)
    TRUE_VALUE      reduce using rule 72 (PA -> PARENTHESIS_OPEN .)
    FALSE_VALUE     reduce using rule 72 (PA -> PARENTHESIS_OPEN .)
    QUOTATION_MARKS reduce using rule 72 (PA -> PARENTHESIS_OPEN .)


state 27

    (64) GCF -> F PA . CDF PC MY C MN BLOCK_CODE
    (65) GCF -> F PA . CDF PC MY MN BLOCK_CODE
    (68) CDF -> . NUMBER SE NUMBER SE O

    NUMBER          shift and go to state 51

    CDF                            shift and go to state 50

state 28

    (16) PRINT -> AO VAP . AC BLOCK_CODE
    (25) AC -> . ME SUBTRACTION
    (61) ME -> . LESS_THAN

    LESS_THAN       shift and go to state 24

    AC                             shift and go to state 52
    ME                             shift and go to state 53

state 29

    (19) VAP -> V .
    (41) CD -> V . S V
    (42) CD -> V . S VA
    (45) S -> . EQUAL
    (46) S -> . GREATER_THAN
    (47) S -> . LESS_THAN
    (48) S -> . GREATER_OR_EQUAL
    (49) S -> . LESS_OR_EQUAL
    (50) S -> . NOT_EQUAL

  ! shift/reduce conflict for LESS_THAN resolved as shift
    EQUAL           shift and go to state 55
    GREATER_THAN    shift and go to state 56
    LESS_THAN       shift and go to state 57
    GREATER_OR_EQUAL shift and go to state 58
    LESS_OR_EQUAL   shift and go to state 59
    NOT_EQUAL       shift and go to state 60

  ! LESS_THAN       [ reduce using rule 19 (VAP -> V .) ]

    S                              shift and go to state 54

state 30

    (20) VAP -> VA .
    (43) CD -> VA . S V
    (44) CD -> VA . S VA
    (45) S -> . EQUAL
    (46) S -> . GREATER_THAN
    (47) S -> . LESS_THAN
    (48) S -> . GREATER_OR_EQUAL
    (49) S -> . LESS_OR_EQUAL
    (50) S -> . NOT_EQUAL

  ! shift/reduce conflict for LESS_THAN resolved as shift
    EQUAL           shift and go to state 55
    GREATER_THAN    shift and go to state 56
    LESS_THAN       shift and go to state 57
    GREATER_OR_EQUAL shift and go to state 58
    LESS_OR_EQUAL   shift and go to state 59
    NOT_EQUAL       shift and go to state 60

  ! LESS_THAN       [ reduce using rule 20 (VAP -> VA .) ]

    S                              shift and go to state 61

state 31

    (21) VAP -> CD .

    LESS_THAN       reduce using rule 21 (VAP -> CD .)


state 32

    (22) VAP -> FR .

    LESS_THAN       reduce using rule 22 (VAP -> FR .)


state 33

    (32) VA -> NUMBER .
    (33) VA -> NUMBER . DOT NUMBER

    EQUAL           reduce using rule 32 (VA -> NUMBER .)
    GREATER_THAN    reduce using rule 32 (VA -> NUMBER .)
    LESS_THAN       reduce using rule 32 (VA -> NUMBER .)
    GREATER_OR_EQUAL reduce using rule 32 (VA -> NUMBER .)
    LESS_OR_EQUAL   reduce using rule 32 (VA -> NUMBER .)
    NOT_EQUAL       reduce using rule 32 (VA -> NUMBER .)
    INTEGER_TYPE    reduce using rule 32 (VA -> NUMBER .)
    BOOLEAN_TYPE    reduce using rule 32 (VA -> NUMBER .)
    DECIMAL_TYPE    reduce using rule 32 (VA -> NUMBER .)
    STRING_TYPE     reduce using rule 32 (VA -> NUMBER .)
    IF              reduce using rule 32 (VA -> NUMBER .)
    VARIABLE        reduce using rule 32 (VA -> NUMBER .)
    FOR             reduce using rule 32 (VA -> NUMBER .)
    SUBTRACTION     reduce using rule 32 (VA -> NUMBER .)
    $end            reduce using rule 32 (VA -> NUMBER .)
    RETURN          reduce using rule 32 (VA -> NUMBER .)
    PARENTHESIS_CLOSE reduce using rule 32 (VA -> NUMBER .)
    DOT             shift and go to state 62


state 34

    (34) VA -> TRUE_VALUE .

    EQUAL           reduce using rule 34 (VA -> TRUE_VALUE .)
    GREATER_THAN    reduce using rule 34 (VA -> TRUE_VALUE .)
    LESS_THAN       reduce using rule 34 (VA -> TRUE_VALUE .)
    GREATER_OR_EQUAL reduce using rule 34 (VA -> TRUE_VALUE .)
    LESS_OR_EQUAL   reduce using rule 34 (VA -> TRUE_VALUE .)
    NOT_EQUAL       reduce using rule 34 (VA -> TRUE_VALUE .)
    INTEGER_TYPE    reduce using rule 34 (VA -> TRUE_VALUE .)
    BOOLEAN_TYPE    reduce using rule 34 (VA -> TRUE_VALUE .)
    DECIMAL_TYPE    reduce using rule 34 (VA -> TRUE_VALUE .)
    STRING_TYPE     reduce using rule 34 (VA -> TRUE_VALUE .)
    IF              reduce using rule 34 (VA -> TRUE_VALUE .)
    VARIABLE        reduce using rule 34 (VA -> TRUE_VALUE .)
    FOR             reduce using rule 34 (VA -> TRUE_VALUE .)
    SUBTRACTION     reduce using rule 34 (VA -> TRUE_VALUE .)
    $end            reduce using rule 34 (VA -> TRUE_VALUE .)
    RETURN          reduce using rule 34 (VA -> TRUE_VALUE .)
    PARENTHESIS_CLOSE reduce using rule 34 (VA -> TRUE_VALUE .)


state 35

    (35) VA -> FALSE_VALUE .

    EQUAL           reduce using rule 35 (VA -> FALSE_VALUE .)
    GREATER_THAN    reduce using rule 35 (VA -> FALSE_VALUE .)
    LESS_THAN       reduce using rule 35 (VA -> FALSE_VALUE .)
    GREATER_OR_EQUAL reduce using rule 35 (VA -> FALSE_VALUE .)
    LESS_OR_EQUAL   reduce using rule 35 (VA -> FALSE_VALUE .)
    NOT_EQUAL       reduce using rule 35 (VA -> FALSE_VALUE .)
    INTEGER_TYPE    reduce using rule 35 (VA -> FALSE_VALUE .)
    BOOLEAN_TYPE    reduce using rule 35 (VA -> FALSE_VALUE .)
    DECIMAL_TYPE    reduce using rule 35 (VA -> FALSE_VALUE .)
    STRING_TYPE     reduce using rule 35 (VA -> FALSE_VALUE .)
    IF              reduce using rule 35 (VA -> FALSE_VALUE .)
    VARIABLE        reduce using rule 35 (VA -> FALSE_VALUE .)
    FOR             reduce using rule 35 (VA -> FALSE_VALUE .)
    SUBTRACTION     reduce using rule 35 (VA -> FALSE_VALUE .)
    $end            reduce using rule 35 (VA -> FALSE_VALUE .)
    RETURN          reduce using rule 35 (VA -> FALSE_VALUE .)
    PARENTHESIS_CLOSE reduce using rule 35 (VA -> FALSE_VALUE .)


state 36

    (36) VA -> QUOTATION_MARKS . V QUOTATION_MARKS
    (30) V -> . VARIABLE

    VARIABLE        shift and go to state 19

    V                              shift and go to state 63

state 37

    (23) FR -> TD . V ME PR MA
    (24) FR -> TD . V ME MA
    (30) V -> . VARIABLE

    VARIABLE        shift and go to state 19

    V                              shift and go to state 64

state 38

    (18) AO -> SUBTRACTION MA .

    VARIABLE        reduce using rule 18 (AO -> SUBTRACTION MA .)
    NUMBER          reduce using rule 18 (AO -> SUBTRACTION MA .)
    TRUE_VALUE      reduce using rule 18 (AO -> SUBTRACTION MA .)
    FALSE_VALUE     reduce using rule 18 (AO -> SUBTRACTION MA .)
    QUOTATION_MARKS reduce using rule 18 (AO -> SUBTRACTION MA .)
    INTEGER_TYPE    reduce using rule 18 (AO -> SUBTRACTION MA .)
    BOOLEAN_TYPE    reduce using rule 18 (AO -> SUBTRACTION MA .)
    DECIMAL_TYPE    reduce using rule 18 (AO -> SUBTRACTION MA .)
    STRING_TYPE     reduce using rule 18 (AO -> SUBTRACTION MA .)


state 39

    (62) MA -> GREATER_THAN .

    VARIABLE        reduce using rule 62 (MA -> GREATER_THAN .)
    NUMBER          reduce using rule 62 (MA -> GREATER_THAN .)
    TRUE_VALUE      reduce using rule 62 (MA -> GREATER_THAN .)
    FALSE_VALUE     reduce using rule 62 (MA -> GREATER_THAN .)
    QUOTATION_MARKS reduce using rule 62 (MA -> GREATER_THAN .)
    INTEGER_TYPE    reduce using rule 62 (MA -> GREATER_THAN .)
    BOOLEAN_TYPE    reduce using rule 62 (MA -> GREATER_THAN .)
    DECIMAL_TYPE    reduce using rule 62 (MA -> GREATER_THAN .)
    STRING_TYPE     reduce using rule 62 (MA -> GREATER_THAN .)
    OPEN_BODY       reduce using rule 62 (MA -> GREATER_THAN .)
    LESS_THAN       reduce using rule 62 (MA -> GREATER_THAN .)


state 40

    (13) GV -> TD V I . VA BLOCK_CODE
    (32) VA -> . NUMBER
    (33) VA -> . NUMBER DOT NUMBER
    (34) VA -> . TRUE_VALUE
    (35) VA -> . FALSE_VALUE
    (36) VA -> . QUOTATION_MARKS V QUOTATION_MARKS

    NUMBER          shift and go to state 33
    TRUE_VALUE      shift and go to state 34
    FALSE_VALUE     shift and go to state 35
    QUOTATION_MARKS shift and go to state 36

    VA                             shift and go to state 65

state 41

    (14) GV -> TD V BLOCK_CODE .
